# test-scenarios

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-check.yaml  ci.yaml  pr-version.yaml  publish.yaml  release.yaml
examples/: README.md  pyproject.toml
examples/src/: __init__.py  checkout.py
examples/tests/: __init__.py
examples/tests/integration/: __init__.py  test_checkout.py
examples/tests/templates/: __init__.py  customers.py  orders.py  products.py
src/pytest_scenarios/: AGENTS.md  pytest_fixtures.py  scenario.py
src/test_scenarios/: __init__.py  pytest_fixtures.py  scenario.py  template_loader.py  templates.py
tests/: __init__.py  test_init.py  test_module_reload.py  test_options.py  test_scenario_fixture.py  test_template_loader.py  test_templates.py
tests/__snapshots__/test_scenario_fixture/: test_scenario_fixture_creation[customers].json  test_scenario_fixture_creation[orders].json
tests/templates/: customers.py  orders.py  products.py
