[project]
name = "test-scenarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Carlos Martin Sanchez", email = "carlosvin@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[project.entry-points.pytest11]
test_scenarios = "test_scenarios.pytest_fixtures"
