[project]
name = "pytest-scenarios-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pymongo"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-scenarios"]

[tool.uv.sources]
pytest-scenarios = { path = ".." }

[tool.pytest.ini_options]
addopts = "-q"
db-url = "mongodb://127.0.0.1:27017/?directConnection=true"
db-name = "pytest_scenarios_demo"
templates-path = "tests/templates"
pythonpath = ["."]
